0.9.4 (currently working on)

0.9.3 (released 2011-05-26)
- [#4104] Feature: Add a hook for modifying the time frame list rows in the single view
- [#4198] Fix: The registrationManager cannot be XCLASSed
- [#3873] Feature: Modernize the modifyListView hook
- [#4045] Fix: Always use the display title of events
- [#4042] Fix: Table headings in mod2 are invisible (white on white) in TYPO3 4.4
- [#4170] Fix: tx_seminars_seminar::getOrganizerBag needs to sort the organizers by the relation sorting
- [#4159] Fix: In the notification e-mail to the organizers, add a LF before the field data if the field data contains a LF or CR
- [#4130] Fix: Set the numeric locale in our CLI scripts
- [#4125] Fix: Check all class_exists for the correct use of the autoload flag
- [#4024] Fix: Test failure: tx_seminars_Mapper_EventTest::getOrganizersWithOneOrganizerReturnsOneOrganizer
- [#3968] Fix: "Manual sorting of events"-feature is not available for non-admin-users
- [#4094] Fix: Use empty configurations in the unit tests
- [#3995] Change: Add a conflict with the "sourceopt" extension, thanks to Philipp Gampe
- [#3992] Change: Increase the size of the hideFields and hideColumns fields in the flexforms
- [#3866] Fix: Path to changed registration form HTML template not used
- [#3931] Fix: Prices greater 9999.999 are not possible, thanks to Philipp Gampe
- [#3856] Change: Make ISO8859-15 the charset for the CSV for the CSV export and convert the data
- [#3839] Fix: Clarify the label for the organizer footer (thanks to Philipp Gampe)
- [#3930] Fix: Typo in the reference: boh -> both
- [#3914] Fix: Spelling, punctuation and grammar errors and inconsistencies in manual (thanks to Christian Hennecke)

0.9.2 (released 2010-05-29)
- [#1879] Fix: Don't use &= or |= for booleans
- [#3851] Fix: CSV export for events from the BE ignores event record in subfolders
- [#3874] Fix: Test failures in the registration manager testcase
- [#3872] Feature: Add a hook for modifying the "my events" list row