@@ -242,7 +242,7 @@ abstract class tx_seminars_BackEnd_EventMailForm {
 		return '<p><label for="subject">' .
 			$GLOBALS['LANG']->getLL('eventMailForm_subject') . '</label>' .
 			'<input type="text" id="subject" name="subject" value="' .
-			$this->fillFormElement('subject') . '" ' .
+			htmlspecialchars($this->fillFormElement('subject'), ENT_QUOTES, 'utf-8') . '" ' .
 			$classMarker . '/>' . $this->getErrorMessage('subject') . '</p>';
 	}
 
